# Cord

./: .gitignore  .gitmodules  .prettierrc  .taurignore  Cargo.toml  eslint.config.mjs  package.json  tauri.conf.json  tsconfig.json
icons/: icon.icns
licenses/: header-based-on.txt  header-vencord-old.txt  header.txt
src/: main.rs
