[package]
name = "cord"
version = "1.0.0"
description = "The least cute discord client mod"
authors = ["itsfelix5"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ItsFelix5/Cord"
edition = "2021"
rust-version = "1.82"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2.0.0-alpha.2"
tauri-plugin-single-instance = "2.0.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = ["Data_Xml_Dom", "UI_Notifications"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
